--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Git San Tar Par</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam iste voluptatibus quaerat quia sit amet doloribus harum enim praesentium eaque nobis accusantium mollitia qui libero placeat id, at consequuntur suscipit?</p>
     <script src="js/app.js"></script>
 </body>
 </html>
